Temporary proxy files are not erased and old proxys are not updated if the proxy is built more then once (windows) #30315

Closed
opened 2012-02-23 01:55:02 +01:00 by David Sheftick · 6 comments

%%%When the proxys are being built blender creates temporary that have the word "part" in their name (timecode and avi files). These files are erased once blender finishes building the proxys the first time, but if you rebuild the proxys then these files do not get deleted and the original files are not updated. (Checked the time the file was modified to confirm this.)
(PS. Build quality still has no effect. last report)
This only seems to only be a problem on windows.

Tested on Blender 2.62 official release (32bit and 64bit).

Windows 7 64bit and Ubuntu 11.04 32 bit (No problem here :)).

4GB ram

NVIDIA Quadro 1600M

#9500 Core 2 Duo @ 2.6 GHz.%%%

%%%When the proxys are being built blender creates temporary that have the word "part" in their name (timecode and avi files). These files are erased once blender finishes building the proxys the first time, but if you rebuild the proxys then these files do not get deleted and the original files are not updated. (Checked the time the file was modified to confirm this.) (PS. Build quality still has no effect. last report) This only seems to only be a problem on windows. Tested on Blender 2.62 official release (32bit and 64bit). Windows 7 64bit and Ubuntu 11.04 32 bit (No problem here :)). 4GB ram NVIDIA Quadro 1600M #9500 Core 2 Duo @ 2.6 GHz.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev44363. Thanks for the report, closing.%%%

%%%Fixed in svn rev44363. Thanks for the report, closing.%%%
Author

%%%Works better but it still cant replace the proxy file if it is currently being used for the preview.
For example build the proxys. Then change the "Proxy render size" option from "Scene render size" to "Proxy size 25%". Then rebuild the proxys. The proxy file that is being used for the preview will not be replaced.%%%

%%%Works better but it still cant replace the proxy file if it is currently being used for the preview. For example build the proxys. Then change the "Proxy render size" option from "Scene render size" to "Proxy size 25%". Then rebuild the proxys. The proxy file that is being used for the preview will not be replaced.%%%

%%%Ah, indeed. Didn't test this case. Will see what i can do with this issue :)%%%

%%%Ah, indeed. Didn't test this case. Will see what i can do with this issue :)%%%

%%%I hope the issue is fixed in svn rev44545. Thanks again for the report :)%%%

%%%I hope the issue is fixed in svn rev44545. Thanks again for the report :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30315
No description provided.