source/blender/imbuf/IMB_imbuf.h
@@ -199,7 +199,7 @@ typedef enum IMB_Timecode_Type {
 				  device (*every* consumer camcorder can do
 				  that :) )*/
 	IMB_TC_RECORD_RUN_NO_GAPS = 8,
-	IMB_TC_MAX_SLOT   = 8
+	IMB_TC_MAX_SLOT   = 4
 } IMB_Timecode_Type;
 
 typedef enum IMB_Proxy_Size {
